se modifica archivo package.json para el build

--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,11 @@
     "sweetalert": "^2.1.2",
     "web-vitals": "^0.2.4"
   },
+  
+
+  "homepage": "https://pgym.coderbox.com.ar",
+
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
