--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,6 @@
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
-    "gh-pages": "^3.2.3",
-    "production": "^0.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-maps": "^9.4.5",
@@ -21,13 +19,10 @@
     "react-scripts": "4.0.0",
     "redux-thunk": "^2.4.1",
     "sweetalert": "^2.1.2",
-    "web-vitals": "^0.2.4",
-    "webpack": "^5.72.0"
+    "web-vitals": "^0.2.4"
   },
   "homepage": ".",
   "scripts": {
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
