--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,11 @@
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-dom": "^17.0.1",
     "react-google-maps": "^9.4.5",
     "react-icons": "^4.3.1",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.0",
