--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
     "sweetalert": "^2.1.2",
     "web-vitals": "^0.2.4"
   },
-  "homepage": ".",
+  "homepage": "https://pgym.coderbox.com.ar/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
