--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
+    "firebase": "^9.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.1",
     "react-google-maps": "^9.4.5",
