--- a/api/package.json
+++ b/api/package.json
@@ -19,11 +19,12 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "nodemon": "^2.0.6",
     "express": "^4.18.0",
     "ioredis": "^4.19.2",
     "jsonwebtoken": "^8.5.1",
+    "mercadopago": "^1.5.12",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.6",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5"
   },
