--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.3.1",
     "firebase": "^9.7.0",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.1",
     "react-google-maps": "^9.4.5",
     "react-icons": "^4.3.1",
