--- a/client/package.json
+++ b/client/package.json
@@ -22,8 +22,10 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.0",
+    "react-simple-chatbot": "^0.6.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.5",
     "sweetalert": "^2.1.2",
     "web-vitals": "^0.2.4"
   },
