--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@react-google-maps/api": "^2.10.2",
     "@redux-devtools/extension": "^3.2.2",
     "@reduxjs/toolkit": "^1.8.1",
@@ -15,14 +18,14 @@
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.1",
-    "react-google-maps": "^9.4.5",
+    "react-google-maps": "^7.3.0",
     "react-icons": "^4.3.1",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.6",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "4.0.0",
-    "react-simple-chatbot": "^0.6.1",
+    "react-scripts": "^5.0.1",
+    "react-simple-chatbot": "^0.5.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
